--- a/PLANT_PPE/Views/Login/Index.cshtml
+++ b/PLANT_PPE/Views/Login/Index.cshtml
@@ -173,7 +173,7 @@
                             <!-- Header -->
                             <div class="px-4 py-2 mb-4">
                                 <a class="link-fx fw-bold" href="">
-                                    <i class="fa fa-fire"></i>
+                                    <i class="fab fa-mixcloud"></i>
                                     <span class="fs-4 text-body-color">KPP</span><span class="fs-4">PPE</span>
                                 </a>
                                 <h1 class="h3 fw-bold mt-4 mb-2">Welcome to Your Dashboard</h1>
@@ -196,6 +196,12 @@
                                 <div class="form-group mb-4">
                                     <label class="form-label" for="jobSite">Jobsite</label>
                                     <select class="js-select2 form-select" id="jobSite" name="jobSite" style="width: 100%;">
+                                        <option>Loading...</option>
+                                    </select>
+                                </div>
+                                <div class="form-group mb-4">
+                                    <label class="form-label" for="roled">Role</label>
+                                    <select class="js-select2 form-select" id="roled" name="roled" style="width: 100%;">
                                         <option>Loading...</option>
                                     </select>
                                 </div>
