--- a/PLANT_PPE/Views/Approval/ProjectManagerPenerima.cshtml
+++ b/PLANT_PPE/Views/Approval/ProjectManagerPenerima.cshtml
@@ -1,25 +1,26 @@
 ﻿
 @{
     ViewBag.Title = "Project Manager";
-    ViewBag.JS = "/Scripts/Page/ApprovalProjectManager.js";
+    ViewBag.JS = "/Scripts/Page/ApprovalProjectManagerPenerima.js";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />
 
 <h2 class="content-heading">Approval Project Manager</h2>
+
 <div class="block block-rounded">
     <div class="block-header block-header-default">
         <h3 class="block-title">
-            Approval PM Pengirim <small>All List Approval PPE Pengirim</small>
+            Approval PM Penerima <small>All List Approval PPE Penerima</small>
         </h3>
     </div>
     <div class="block-content block-content-full">
-        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_ppe_pengirim">
+        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_ppe_penerima">
             <thead class="text-center bg-primary text-white">
                 <tr>
                     @*<th>NO</th>*@
-                    <th><input type="checkbox" id="checkAll"></th>
+                    <th><input type="checkbox" id="checkAll2"></th>
                     <th>PPE NUMBER</th>
                     <th>EGI</th>
                     <th>EQP NUMBER</th>
@@ -36,71 +37,43 @@
     </div>
 </div>
 
-<!--<div class="block block-rounded">
-    <div class="block-header block-header-default">
-        <h3 class="block-title">
-            Approval PM Penerima <small>All List Approval PPE Penerima</small>
-        </h3>
-    </div>
-    <div class="block-content block-content-full">
-        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_ppe_penerima">
-            <thead class="text-center bg-primary text-white">
-                <tr>-->
-                    @*<th>NO</th>*@
-                    <!--<th><input type="checkbox" id="checkAll2"></th>
-                    <th>PPE NUMBER</th>
-                    <th>EGI</th>
-                    <th>EQP NUMBER</th>
-                    <th>FROM DISTRICT</th>
-                    <th>TO DISTRICT</th>
-                    <th>CREATED DATE</th>
-                    <th>STATUS</th>
-                    <th>ACTION</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-</div>-->
-
 <div class="row">
     <div class="col-md-6">
-    <div class="block block-rounded">
-        <div class="block-header block-header-default">
-            <h3 class="block-title">Agreement's <small>Content Agreement's</small></h3>
-            @*<div class="block-options">
-                <div class="block-options-item">
-                    <div class="alert alert-warning py-2 mb-0">
-                        <i class="fa fa-exclamation-triangle opacity-50 me-1"></i> This is important!
-                    </div>
-                </div>
-            </div>*@
-        </div>
-        @*<div class="block-content">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms" style="color:blue">Terms &amp; Conditions</a>
-            <span class="text-danger">*</span>
-        </div>*@
-        <div class="block-content block-content-full">
-            <label class="col-sm-7" for="txtxt">*klik untuk membaca agreement</label>
-            <button type="button" class="btn btn-alt-primary" data-bs-toggle="modal" data-bs-target="#modal-terms" id="txtxt">Agreement's Approval</button>
-        </div>
-        @*<div class="block-content" id="agreementss">
+        <div class="block block-rounded">
+            <div class="block-header block-header-default">
+                <h3 class="block-title">Agreement's <small>Content Agreement's</small></h3>
+                @*<div class="block-options">
+                        <div class="block-options-item">
+                            <div class="alert alert-warning py-2 mb-0">
+                                <i class="fa fa-exclamation-triangle opacity-50 me-1"></i> This is important!
+                            </div>
+                        </div>
+                    </div>*@
+            </div>
+            @*<div class="block-content">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms" style="color:blue">Terms &amp; Conditions</a>
+                    <span class="text-danger">*</span>
+                </div>*@
+            <div class="block-content block-content-full">
+                <label class="col-sm-7" for="txtxt">*klik untuk membaca agreement</label>
+                <button type="button" class="btn btn-alt-primary" data-bs-toggle="modal" data-bs-target="#modal-terms" id="txtxt">Agreement's Approval</button>
+            </div>
+            @*<div class="block-content" id="agreementss">
 
-        </div>*@
-        <div class="block-content block-content-full block-content-sm bg-body-light fs-sm">
-            <div class="block-options justify-content-center">
-                <div class="row text-center">
-                    <div class="col-auto">
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="val-terms" name="val-terms" value="1" disabled>
-                            <label class="form-check-label" for="val-terms">I accept license &amp; terms</label>
+                </div>*@
+            <div class="block-content block-content-full block-content-sm bg-body-light fs-sm">
+                <div class="block-options justify-content-center">
+                    <div class="row text-center">
+                        <div class="col-auto">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="val-terms" name="val-terms" value="1" disabled>
+                                <label class="form-check-label" for="val-terms">I accept license &amp; terms</label>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
 
@@ -120,12 +93,12 @@
                     <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="submitApproval(this.value)">
                         <i class="fa fa-times opacity-50 me-1"></i> Cancel
                     </button>
-                    <button type="submit" class="btn btn-sm btn-success" value="PM PENGIRIM APPROVED" onclick="submitApproval(this.value)">
+                    @*<button type="submit" class="btn btn-sm btn-success" value="PM PENGIRIM APPROVED" onclick="submitApproval(this.value)">
+                        <i class="fa fa-check-circle opacity-50 me-1"></i> Approve (PM Pengirim)
+                    </button>*@
+                    <button type="submit" class="btn btn-sm btn-success" value="PM PENERIMA APPROVED" onclick="submitApprovalPenerima(this.value)">
                         <i class="fa fa-check-circle opacity-50 me-1"></i> Approve
                     </button>
-                    @*<button type="submit" class="btn btn-sm btn-success" value="PM PENERIMA APPROVED" onclick="submitApprovalPenerima(this.value)">
-                        <i class="fa fa-check-circle opacity-50 me-1"></i> Approve (PM Penerima)
-                    </button>*@
                 </div>
             </div>
         </div>
