--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />
+
 <h2 class="content-heading">Register PPE</h2>
 
 <div class="row">
@@ -101,7 +103,7 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_ppeDesc">PPE Description</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control form-control-sm " id="txt_ppeDesc" name="txt_ppeDesc">
+                        <input type="text" class="form-control form-control-sm " id="txt_ppeDesc" name="txt_ppeDesc" readonly>
                     </div>
                 </div>
                 <div class="row mb-3">
@@ -219,7 +221,7 @@
 </div>
 
 <div class="modal fade" id="modal-terms" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
-    <div class="modal-dialog modal-dialog-popin">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
