--- a/PLANT_PPE/Views/PPE/DetailPPE.cshtml
+++ b/PLANT_PPE/Views/PPE/DetailPPE.cshtml
@@ -18,6 +18,7 @@
                     <label class="col-sm-4 col-form-label" for="txt_noPPE">No PPE</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control form-control-sm " id="id_ppe" name="id_ppe" value="@ViewBag.idppe" hidden>
+                      @* <input type="text" class="form-control form-control-sm " id="id_ppe" name="no_quip" value="@ViewBag.EQP" hidden>*@
                         <input type="text" class="form-control form-control-sm " id="txt_noPPE" name="txt_noPPE" @*value="@ViewBag.noPpe"*@ readonly>
                     </div>
                 </div>
