--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -12,14 +12,14 @@
             Table Review <small>Permohonan Pemindahan Equipment</small>
         </h3>
         @*<div class="block-options">
-            <div class="block-options-item">
-                <button type="button" class="btn btn-success py-2 mb-0" data-bs-toggle="modal" data-bs-target="#modal-insert" onclick="showInsert();">
-                    <i class="fa fa-add opacity-50 me-1"></i> Add Mapping Approval
-                </button>
-            </div>
-        </div>*@
+                <div class="block-options-item">
+                    <button type="button" class="btn btn-success py-2 mb-0" data-bs-toggle="modal" data-bs-target="#modal-insert" onclick="showInsert();">
+                        <i class="fa fa-add opacity-50 me-1"></i> Add Mapping Approval
+                    </button>
+                </div>
+            </div>*@
     </div>
-   
+
 
     <div class="block-content block-content-full">
         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_reviewppe">
@@ -44,14 +44,14 @@
 </div>
 
 
-<!--<div class="modal" id="reviewDetail" tabindex="-1" aria-labelledby="modal-large" aria-modal="true" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
+<div class="modal" id="modal-detail" tabindex="-1" aria-labelledby="modal-large" aria-modal="true" role="dialog">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Register User's Group</h3>
                     <div class="block-options">
-                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close" onclick="detailClose()">
                             <i class="fa fa-times"></i>
                         </button>
                     </div>
@@ -60,136 +60,28 @@
 
 
                     <div class="row">
-                        <div class=" col-6">
-                            <div class="mb-4">
-                               
-                                <label class="form-label" for="txt_nrp">NO PPE</label>
-                                <input type="text" class="form-control" id="ppe_no" placeholder="Number Order">
-                            </div>
-                        </div>
-
-                        <div class="col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_group">APPROVAL ORDER</label>
-                                <input type="text" class="form-control" id="apprv_order" placeholder="Number Order">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class=" col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_nrp">APPROVAL FROM</label>
-                                <select class="js-select2 form-select select2-modal" id="apprv_from" name="apprv_from" onchange="getloc_from()" style="width: 100%;">-->
-
-                                    @*@foreach (var item in ViewBag.dstrct)
-                                        {
-                                            <option value="@item.DSTRCT_CODE">@item.DSTRCT_CODE</option>
-                                        }*@
-                                <!--</select>
-                            </div>
-                        </div>
-
-                        <div class="col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_group">APPROVAL TO</label>
-                                <select class="js-select2 form-select select2-modal" id="apprv_to" name="apprv_to" onchange="getloc_to()" style="width: 100%;">-->
-
-                                    @*@foreach (var item in ViewBag.loc)
-                                        {
-                                            <option value="@item.TABLE_CODE">@item.TABLE_CODE</option>
-                                        }*@
-                                <!--</select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class=" col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_nrp">LOCATION FROM</label>
-                                <select class="js-select2 form-select select2-modal" id="loc_from" name="loc_from" style="width: 100%;">-->
-
-                                    @*@foreach (var item in ViewBag.dstrct)
-                                        {
-                                            <option value="@item.DSTRCT_CODE">@item.DSTRCT_CODE</option>
-                                        }*@
-                                <!--</select>
-                            </div>
-                        </div>
-
-                        <div class="col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_group">LOCATION TO</label>
-                                <select class="js-select2 form-select select2-modal" id="loc_to" name="loc_to" style="width: 100%;">-->
-
-                                    @*@foreach (var item in ViewBag.loc)
-                                        {
-                                            <option value="@item.TABLE_CODE">@item.TABLE_CODE</option>
-                                        }*@
-                                <!--</select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class=" col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_nrp">CURRENT POSITION</label>
-                                <select class="js-select2 form-select select2-modal" id="curr_position" name="curr_position" style="width: 100%;">
-                                    <option></option>-->
-                                    @*@foreach (var item in ViewBag.dstrct)
-                                        {
-                                            <option value="@item.DSTRCT_CODE">@item.DSTRCT_CODE</option>
-                                        }*@
-                                <!--</select>
-                            </div>
-                        </div>
-
-                        <div class="col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_group">NEXT POSITION</label>
-                                <select class="js-select2 form-select select2-modal" id="next_position" name="next_position" style="width: 100%;">-->
-
-                                    @*@foreach (var item in ViewBag.loc)
-                                        {
-                                            <option value="@item.TABLE_CODE">@item.TABLE_CODE</option>
-                                        }*@
-                                <!--</select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class=" col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_nrp">APPROVAL STATUS</label>
-                                <textarea class="form-control" id="apprv_status" rows="2"></textarea>
-                            </div>
-                        </div>
-
-                        <div class="col-6">
-                            <div class="mb-4">
-                                <label class="form-label" for="txt_group">CURRENT STATUS</label>
-                                <textarea class="form-control" id="curr_status" rows="2"></textarea>
-
-                            </div>
-                        </div>
+                        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_detail">
+                            <thead class="text-center">
+                                <tr>
+                                    <th>POSITION</th>
+                                    <th>STATUS</th>
+                                    <th>PIC</th>
+                                    @*<th>REMAKS</th>*@
+                                    <th>APPROVAL DATE</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
 
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
-                    <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal">
+                    <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal" onclick="detailClose()">
                         Cancel
-                    </button>
-                    <button id="buttonInsert" type="button" class="btn btn-alt-primary" onclick="insertMapApproval()">
-                        Insert
-                    </button>
-                    <button id="buttonUpdate" type="button" class="btn btn-alt-primary" onclick="updateMapApproval()">
-                        Update
                     </button>
                 </div>
             </div>
         </div>
     </div>
-</div>-->
+</div>
