--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -65,7 +65,7 @@
                                 <tr>
                                     <th>POSITION</th>
                                     <th>STATUS</th>
-                                    <th>PIC</th>
+                                    <th>NO QUIPMENT</th>
                                     @*<th>REMAKS</th>*@
                                     <th>APPROVAL DATE</th>
                                 </tr>
