publish setelah merge

--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -26,14 +26,14 @@
             <thead class="text-center">
                 <tr>
                     <th>DATE</th>
-                    <th>NUMBER PPE</th>
-                    <th>EQUIPMENT GROUP ID</th>
-                    <th>CLASS</th>
-                    <th>EQUIPMENT NUMBER</th>
-                    <th>SERIAL NUMBER</th>
+                    <th>PPE NO</th>
+                    <th>EGI</th>
+                    @*<th>EQUIP CLASS</th>*@
+                    <th>EQUIP NO</th>
+                    @*<th>SERIAL NUMBER</th>*@
                     <th>FROM</th>
                     <th>TO</th>
-                    <th>POSITION</th>
+                    <th>POSISI PPE</th>
                     <th>ACTION</th>
                 </tr>
             </thead>
@@ -64,10 +64,10 @@
                             <thead class="text-center">
                                 <tr>
                                     <th>POSITION</th>
-                                    <th>STATUS</th>
-                                    <th>NO QUIPMENT</th>
+                                    <th>APPROVED BY</th>
+                                    <th>EQUIP NO</th>
                                     @*<th>REMAKS</th>*@
-                                    <th>APPROVAL DATE</th>
+                                    <th>APPROVED DATE</th>
                                 </tr>
                             </thead>
                             <tbody>
