--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -23,7 +23,7 @@
 
     <div class="block-content block-content-full">
         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_reviewppe">
-            <thead class="text-center">
+            <thead class="text-center bg-primary text-white">
                 <tr>
                     <th>DATE</th>
                     <th>PPE NO</th>
@@ -61,7 +61,7 @@
 
                     <div class="row">
                         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_detail">
-                            <thead class="text-center">
+                            <thead class="text-center bg-primary text-white">
                                 <tr>
                                     <th>POSITION</th>
                                     <th>APPROVED BY</th>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="block-content block-content-full block-content-sm text-end border-top">
                     <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal" onclick="detailClose()">
-                        Cancel
+                        Close
                     </button>
                 </div>
             </div>
