--- a/PLANT_PPE/Views/Approval/SectionHead.cshtml
+++ b/PLANT_PPE/Views/Approval/SectionHead.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Section Head";
     ViewBag.JS = "/Scripts/Page/ApprovalSecHead.js";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
