--- a/PLANT_PPE/Views/Approval/PlantManager.cshtml
+++ b/PLANT_PPE/Views/Approval/PlantManager.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Plant Manager";
     ViewBag.JS = "/Scripts/Page/ApprovalPlantManager.js";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
