--- a/PLANT_PPE/Views/Approval/DivHead.cshtml
+++ b/PLANT_PPE/Views/Approval/DivHead.cshtml
@@ -36,34 +36,6 @@
     </div>
 </div>
 
-<!--<div class="block block-rounded">
-    <div class="block-header block-header-default">
-        <h3 class="block-title">
-            Approval Opeartor GM <small>All list Approval OPR GM</small>
-        </h3>
-    </div>
-    <div class="block-content block-content-full">
-        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_ppe_opr">
-            <thead class="text-center bg-primary text-white">
-                <tr>-->
-                    @*<th>NO</th>*@
-                    <!--<th><input type="checkbox" id="checkAll2"></th>
-                    <th>PPE NUMBER</th>
-                    <th>EGI</th>
-                    <th>EQP NUMBER</th>
-                    <th>FROM DISTRICT</th>
-                    <th>TO DISTRICT</th>
-                    <th>CREATED DATE</th>
-                    <th>STATUS</th>
-                    <th>ACTION</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-</div>-->
-
 <div class="block block-rounded block-link-shadow">
     <div class="block-header">
         <h3 class="block-title">Remarks</h3>
@@ -77,15 +49,12 @@
         <div class="block-options justify-content-center">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="submitApproval(this.value)">
+                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="rejectApproval(this.value)">
                         <i class="fa fa-times opacity-50 me-1"></i> Cancel
                     </button>
                     <button type="submit" class="btn btn-sm btn-success" value="DIVISION HEAD ENG APPROVED" onclick="submitApproval(this.value)">
                         <i class="fa fa-check-circle opacity-50 me-1"></i> Approve
                     </button>
-                    @*<button type="submit" class="btn btn-sm btn-success" value="DIVISION HEAD OPR APPROVED" onclick="submitApprovalOPR(this.value)">
-                        <i class="fa fa-check-circle opacity-50 me-1"></i> Approve (Division Head OPR)
-                    </button>*@
                 </div>
             </div>
         </div>
