--- a/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
+++ b/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
@@ -40,21 +40,6 @@
     </div>
 </div>
 
-@*<div class="row">
-        <div class="col-md-6">
-            <div class="block block-rounded">
-                <div class="block-content">
-                    <div class="row mb-3">
-                        <label class="col-sm-4 col-form-label" for="txt_formCAAB">Upload Form CAAB</label>
-                        <div class="col-sm-8">
-                            <input class="form-control" type="file" accept=".pdf" id="txt_formCAAB">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>*@
-
 <div class="block block-rounded block-link-shadow">
     <div class="block-header">
         <h3 class="block-title">Remarks</h3>
@@ -68,7 +53,7 @@
         <div class="block-options justify-content-center">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="submitApproval(this.value)">
+                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="rejectApproval(this.value)">
                         <i class="fa fa-times opacity-50 me-1"></i> Cancel
                     </button>
                     <button type="submit" class="btn btn-sm btn-success" value="PLANT DEPT. HEAD APPROVED" onclick="submitApproval(this.value)">
