--- a/PLANT_PPE/Views/PPE/DetailPPE.cshtml
+++ b/PLANT_PPE/Views/PPE/DetailPPE.cshtml
@@ -6,7 +6,6 @@
 }
 
 <h2 class="content-heading">Detail PPE</h2>
-
 <div class="block block-rounded block-link-shadow">
     <div class="block-header block-header-default">
         <h3 class="block-title">Review PPE</h3>
@@ -18,8 +17,7 @@
                     <label class="col-sm-4 col-form-label" for="txt_noPPE">No PPE</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control form-control-sm " id="id_ppe" name="id_ppe" value="@ViewBag.idppe" hidden>
-                      @* <input type="text" class="form-control form-control-sm " id="id_ppe" name="no_quip" value="@ViewBag.EQP" hidden>*@
-                        <input type="text" class="form-control form-control-sm " id="txt_noPPE" name="txt_noPPE" @*value="@ViewBag.noPpe"*@ readonly>
+                        <input type="text" class="form-control form-control-sm " id="txt_noPPE" name="txt_noPPE" readonly>
                     </div>
                 </div>
                 <div class="row mb-3">
@@ -102,15 +100,5 @@
             </div>
         </div>
     </div>
-
-
-    
-        
-            
-                
-               
-        
-
-
 </div>
 
