--- a/PLANT_PPE/Views/SM/Review.cshtml
+++ b/PLANT_PPE/Views/SM/Review.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="content-heading">SM Review</h2>
+<h2 class="content-heading">Supply Management Review</h2>
 <div class="block block-rounded">
     <div class="block-header block-header-default">
         <h3 class="block-title">
