--- a/PLANT_PPE/Views/Approval/DetailPPE.cshtml
+++ b/PLANT_PPE/Views/Approval/DetailPPE.cshtml
@@ -102,7 +102,7 @@
         <div class="block-options justify-content-center">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <a href="/Home/Index" class="btn btn-sm btn-info"><i class="fa fa-backward opacity-50 me-1"></i>Back</a>                    
+                    @*<a href="/Home/Index" class="btn btn-sm btn-info"><i class="fa fa-backward opacity-50 me-1"></i>Back</a>*@                    
                 </div>
             </div>
         </div>
