--- a/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
+++ b/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<input type="hidden" id="hd_idProfile" value="@Session["ID_Role"]" />
+@*<input type="hidden" id="hd_idProfile" value="@Session["ID_Role"]" />
 <input type="hidden" id="hd_idNrp" value="@Session["Nrp"]" />
 <input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />
-<input type="text" id="txt_PositionID" value="@ViewBag.POSID" hidden />
+<input type="text" id="txt_PositionID" value="@ViewBag.POSID" hidden />*@
 
 <h2 class="content-heading">Approval Plant Dept. Head</h2>
 <div class="block block-rounded">
