--- a/PLANT_PPE/Views/Approval/ProjectManager.cshtml
+++ b/PLANT_PPE/Views/Approval/ProjectManager.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />
+@*<input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />*@
 
 <h2 class="content-heading">Approval Project Manager</h2>
 <div class="block block-rounded">
