--- a/PLANT_PPE/Views/SM/Review.cshtml
+++ b/PLANT_PPE/Views/SM/Review.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Review";
+    ViewBag.Title = "SM Review";
     ViewBag.JS = "/Scripts/Page/SMReview.js";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -51,9 +51,10 @@
                             <thead class="text-center bg-primary text-white">
                                 <tr>
                                     <th>POSITION</th>
-                                    <th>NRP</th>
-                                    <th>NO QUIPMENT</th>
+                                    <th>APPROVED NRP</th>
+                                    <th>EQUIP NO</th>
                                     <th>APPROVED DATE</th>
+                                    @*<th>CAAB</th>*@
                                 </tr>
                             </thead>
                             <tbody>
