--- a/PLANT_PPE/Views/SM/Approve.cshtml
+++ b/PLANT_PPE/Views/SM/Approve.cshtml
@@ -49,10 +49,10 @@
         <div class="block-options justify-content-center">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="r(this.value)">
+                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="rejectApprvl(this.value)">
                         <i class="fa fa-times opacity-50 me-1"></i> Cancel
                     </button>
-                    <button type="submit" class="btn btn-sm btn-success" value="SM APPROVED" onclick="s(this.value)">
+                    <button type="submit" class="btn btn-sm btn-success" value="SM APPROVED" onclick="submitapprvl(this.value)">
                         <i class="fa fa-check-circle opacity-50 me-1"></i> Approve
                     </button>
                 </div>
