--- a/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
+++ b/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
@@ -30,7 +30,7 @@
                     <th>TO DISTRICT</th>
                     <th>CREATED DATE</th>
                     <th>STATUS</th>
-                    <th style="width: 400px;">UPLOAD FORM CAAB</th>
+                    <th>UPLOAD FORM CAAB</th>
                     <th>ACTION</th>
                 </tr>
             </thead>
