--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -16,13 +16,14 @@
         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_reviewppe">
             <thead class="text-center bg-primary text-white">
                 <tr>
-                    <th>DATE</th>
                     <th>PPE NO</th>
                     <th>EGI</th>
                     <th>EQUIP NO</th>
                     <th>FROM</th>
                     <th>TO</th>
+                    <th>CREATED DATE</th>
                     <th>POSISI PPE</th>
+                    <th>STATUS</th>
                     <th>ACTION</th>
                 </tr>
             </thead>
