--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -20,7 +20,11 @@
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
     <link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">
     <link href="~/Content/Site.css" rel="stylesheet" />
-
+    <style>
+        .input-file {
+            width: 250px;
+        }
+    </style>
     <script src="~/Content/assets/js/lib/jquery.min.js"></script>
 
     <!-- Page JS Plugins -->
