--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />
+@*<input type="hidden" id="hd_PositionID" value="@Session["PositionID"]" />*@
 
 <h2 class="content-heading">Register PPE</h2>
 
