--- a/PLANT_PPE/Views/Received/Index.cshtml
+++ b/PLANT_PPE/Views/Received/Index.cshtml
@@ -1,53 +1,32 @@
 ﻿
 @{
-    Layout = null;
+    ViewBag.Title = "SM Approval";
+    ViewBag.JS = "/Scripts/Page/Received.js";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <title>Codebase - Bootstrap 5 Admin Template &amp; UI Framework</title>
-
-    <meta name="description" content="Codebase - Bootstrap 5 Admin Template &amp; UI Framework created by pixelcave and published on Themeforest">
-    <meta name="author" content="pixelcave">
-    <meta name="robots" content="noindex, nofollow">
-    
-    <meta property="og:title" content="Codebase - Bootstrap 5 Admin Template &amp; UI Framework">
-    <meta property="og:site_name" content="Codebase">
-    <meta property="og:description" content="Codebase - Bootstrap 5 Admin Template &amp; UI Framework created by pixelcave and published on Themeforest">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-    
-    <link rel="shortcut icon" href="~/Content/assets/media/favicons/favicon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="~/Content/assets/media/favicons/favicon-192x192.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="~/Content/assets/media/favicons/apple-touch-icon-180x180.png">
-    
-    <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
-    <link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">
-    <link href="~/Content/Site.css" rel="stylesheet" />
-</head>
-<body>
-    <div id="page-container" class="main-content-boxed">
-        <main id="main-container">
-            <div class="hero bg-body-extra-light">
-                <div class="hero-inner">
-                    <div class="content content-full">
-                        <div class="py-4 text-center">
-                            <i class="si si-chemistry text-primary display-3"></i>
-                            <h1 class="h2 fw-bold mt-4 mb-2">We’ll be back soon!</h1>
-                            <h2 class="h5 fw-medium text-muted mb-5">The page you looking for is not found..</h2>
-                            <a class="btn btn-primary" href="/Home/Index">
-                                <i class="fa fa-arrow-left opacity-50 me-1"></i> Go Back to Dashboard
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
+<h2 class="content-heading">Received</h2>
+<div class="block block-rounded">
+    <div class="block-header block-header-default">
+        <h3 class="block-title">
+            Received <small>All list equipment</small>
+        </h3>
     </div>
-    <script src="~/Content/assets/js/codebase.app.min.js"></script>
-</body>
-</html>
+    <div class="block-content block-content-full">
+        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_received">
+            <thead class="text-center bg-primary text-white">
+                <tr>
+                    <th>NO</th>
+                    <th>PPE NUMBER</th>
+                    <th>FROM DISTRICT</th>
+                    <th>TO DISTRICT</th>
+                    <th>CREATED DATE</th>
+                    <th>STATUS</th>
+                    <th>ACTION</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+</div>
