--- a/PLANT_PPE/Views/Setting/AccountProfile.cshtml
+++ b/PLANT_PPE/Views/Setting/AccountProfile.cshtml
@@ -13,7 +13,7 @@
         </h3>
         <div class="block-options">
             <div class="block-options-item">
-                <button type="button" class="btn btn-success py-2 mb-0" data-bs-toggle="modal" data-bs-target="#modal-insert">
+                <button type="button" class="btn btn-success py-2 mb-0" data-bs-toggle="modal" data-bs-target="#modal_insert">
                     <i class="fa fa-add opacity-50 me-1"></i> Add Account Profile
                 </button>
             </div>
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="modal" id="modal-insert" tabindex="-1" aria-labelledby="modal-normal" aria-modal="true" role="dialog">
+<div class="modal" id="modal_insert" tabindex="-1" aria-labelledby="modal-normal" aria-modal="true" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
@@ -50,7 +50,7 @@
                 <div class="block-content fs-sm">
                     <div class="mb-4">
                         <label class="form-label" for="txt_accprofile">Account Profile</label>
-                        <input type="email" class="form-control" id="txt_accprofile" name="txt_accprofile">
+                        <input type="number" class="form-control" id="txt_accprofile" name="txt_accprofile">
                     </div>
                     <div class="mb-4">
                         <label class="form-label" for="txt_district">District</label>
@@ -77,7 +77,7 @@
                     <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="button" class="btn btn-alt-primary" onclick="insertUser()">
+                    <button type="button" class="btn btn-alt-primary" onclick="insertAcct()">
                         Insert
                     </button>
                 </div>
@@ -102,6 +102,10 @@
                 <div class="block-content fs-sm">
                     <div class="mb-4">
                         <input type="text" name="txt_id" id="txt_id" hidden />
+                        <label class="form-label" for="txt_accprof_update">ACCOUNT PROFILE</label>
+                        <input type="number" class="form-control" id="txt_accprof_update" name="txt_accprof_update">
+                    </div>
+                    <div class="mb-4">
                         <label class="form-label" for="txt_distrik_update">DISTRICT</label>
                         <input type="text" class="form-control" id="txt_distrik_update" name="txt_distrik_update">
                     </div>
