Commit Update Review

--- a/PLANT_PPE/Views/Login/Index.cshtml
+++ b/PLANT_PPE/Views/Login/Index.cshtml
@@ -78,7 +78,7 @@
                             <!-- For more examples you can check out https://github.com/jzaefferer/jquery-validation -->
                             <form class="js-validation-signin px-4" action="" method="POST" novalidate="novalidate">
                                 <div class="form-floating mb-4">
-                                    <input type="text" class="form-control form-control-sm" id="login-username" name="login-username" placeholder="Enter your username" onchange="addJobsite();">
+                                    <input type="text" class="form-control form-control-sm" id="login-username" name="login-username" placeholder="Enter your username">
                                     <label class="form-label" for="login-username">kNRP</label>
                                 </div>
                                 <div class="form-floating mb-4">
