--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -54,6 +54,7 @@
                                     <th>NRP</th>
                                     <th>NO QUIPMENT</th>
                                     <th>APPROVED DATE</th>
+                                    <th>FORM CAAB</th>
                                 </tr>
                             </thead>
                             <tbody>
