--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -19,8 +19,8 @@
                     <th>PPE NO</th>
                     <th>EGI</th>
                     <th>EQUIP NO</th>
-                    <th>FROM</th>
-                    <th>TO</th>
+                    <th>DISTRICT FROM</th>
+                    <th>DISTRICT TO</th>
                     <th>CREATED DATE</th>
                     <th>POSISI PPE</th>
                     <th>STATUS</th>
