--- a/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
+++ b/PLANT_PPE/Views/Approval/PlantDeptHead.cshtml
@@ -21,16 +21,16 @@
         <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_ppe">
             <thead class="text-center bg-primary text-white">
                 <tr>
-                    @*<th>NO</th>*@
-                    <th><input type="checkbox" id="checkAll"></th>
+                    <th>NO</th>
+                    @*<th><input type="checkbox" id="checkAll"></th>*@
                     <th>PPE NUMBER</th>
-                    <th>EGI</th>
-                    <th>EQP NUMBER</th>
+                    @*<th>EGI</th>*@
+                    @*<th>EQP NUMBER</th>*@
                     <th>FROM DISTRICT</th>
                     <th>TO DISTRICT</th>
                     <th>CREATED DATE</th>
                     <th>STATUS</th>
-                    <th>UPLOAD FORM CAAB</th>
+                    @*<th>UPLOAD FORM CAAB</th>*@
                     <th>ACTION</th>
                 </tr>
             </thead>
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<div class="block block-rounded block-link-shadow">
+@*<div class="block block-rounded block-link-shadow">
     <div class="block-header">
         <h3 class="block-title">Remarks</h3>
     </div>
@@ -63,4 +63,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
