--- a/PLANT_PPE/Views/Login/Index.cshtml
+++ b/PLANT_PPE/Views/Login/Index.cshtml
@@ -49,7 +49,7 @@
         <!-- Main Container -->
         <main id="main-container">
             <!-- Page Content -->
-            <div class="bg-image" style="background-image: url('Content/assets/media/photos/');">
+            <div class="bg-image" style="background-image: url('Content/assets/media/photos/photo34@2x.jpg'); ">
                 <div class="row mx-0 bg-black-50">
                     <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-end">
                         <div class="p-4">
