--- a/PLANT_PPE/Views/Approval/DivHeadOPR.cshtml
+++ b/PLANT_PPE/Views/Approval/DivHeadOPR.cshtml
@@ -11,7 +11,7 @@
 <div class="block block-rounded">
     <div class="block-header block-header-default">
         <h3 class="block-title">
-            Approval Opeartor GM <small>All list Approval OPR GM</small>
+            Approval Operation GM <small>All list Approval OPR GM</small>
         </h3>
     </div>
     <div class="block-content block-content-full">
