--- a/PLANT_PPE/Views/PPE/Review.cshtml
+++ b/PLANT_PPE/Views/PPE/Review.cshtml
@@ -33,8 +33,9 @@
     </div>
 </div>
 
-<div class="modal" id="modal-detail" tabindex="-1" aria-labelledby="modal-large" aria-modal="true" role="dialog">
-    <div class="modal-dialog modal-xl" role="document">
+@*<div class="modal" id="modal-detail" tabindex="-1" aria-labelledby="modal-large" aria-hidden="true" aria-modal="true" role="dialog">*@
+<div class="modal fade" id="modal-detail" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
